--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
-    <script src="./components/header.js"></script>
-    <header-comp></header-comp>
+<script src="./components/header.js"></script>
+<header-comp></header-comp>
 
 </body>
 </html>
