--- a/product.html
+++ b/product.html
@@ -3,11 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Product page</title>
 </head>
 <body>
     <script src="./components/header.js"></script>
     <header-comp></header-comp>
+    <main class="content">
+        <div class="container">
+            <div class="image-container">
+                <!-- Image of product fetched with API -->
+            </div>
+            <div class="image-container">
+               <!-- Three small product pictures fetched with API -->
+            </div>
+        </div>
+        <div class="container">
+            <h2>Product</h2>
+            <h3>Price product</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores qui ipsa amet optio necessitatibus aliquid sequi. 
+                Rerum, ullam ipsa quo aliquid nulla earum doloremque cum in aperiam eveniet tenetur ducimus.
+            </p>
+            <p>Article number: xxxxxxxx</p>
+            <button type="button">Add to cart</button>
+            <h3>More info</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet earum perferendis, iste, commodi dolor dolorum, 
+                neque laudantium voluptas reiciendis ratione maiores facere et in sit laborum impedit autem amet?</p>
+        </div>
+    </main>
 
 </body>
 </html>
