--- a/product.html
+++ b/product.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product page</title>
+    <link rel="stylesheet" href="styles/product.css">
 </head>
 <body>
     <script src="./components/header.js"></script>
