--- a/product.html
+++ b/product.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <script src="./components/header.js"></script>
+    <script src="./components/footer.js"></script>
     <header-comp></header-comp>
-
+    <footer-comp></footer-comp>
 </body>
 </html>
