--- a/product.html
+++ b/product.html
@@ -32,6 +32,6 @@
         </div>
     </main>
 <script src="./components/footer.js"></script>
-<footer-comp></fpooter-comp>
+<footer-comp></footer-comp>
 </body>
 </html>
