--- a/product.html
+++ b/product.html
@@ -12,26 +12,30 @@
     <header-comp></header-comp>
 
     <main class="content">
-        <div class="container">
-            <div class="image-container">
+    <div class="container-lg">
+        <div class="row">
+            <!-- Product Images -->
+            <div class="col">
                 <!-- Image of product fetched with API -->
+                <div class="d-flex justify-content-between">
+                <!-- Three small product pictures fetched with API-->
+                </div>
             </div>
-            <div class="image-container">
-               <!-- Three small product pictures fetched with API -->
-            </div>
+                <div class="col">
+                    <h2 class="mb-3">Product</h2>
+                    <h3 class="mb-3">Price product</h3>
+                    <p class="mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores qui ipsa amet optio necessitatibus aliquid sequi. 
+                        Rerum, ullam ipsa quo aliquid nulla earum doloremque cum in aperiam eveniet tenetur ducimus.
+                    </p>
+                    <p class="mb-4">Article number: xxxxxxxx</p>
+                    <button class="mb-3" type="button">Add to cart</button>
+                    <h3>More info</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet earum perferendis, iste, commodi dolor dolorum, 
+                        neque laudantium voluptas reiciendis ratione maiores facere et in sit laborum impedit autem amet?</p>
+                </div>
         </div>
-        <div class="container">
-            <h2>Product</h2>
-            <h3>Price product</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores qui ipsa amet optio necessitatibus aliquid sequi. 
-                Rerum, ullam ipsa quo aliquid nulla earum doloremque cum in aperiam eveniet tenetur ducimus.
-            </p>
-            <p>Article number: xxxxxxxx</p>
-            <button type="button">Add to cart</button>
-            <h3>More info</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet earum perferendis, iste, commodi dolor dolorum, 
-                neque laudantium voluptas reiciendis ratione maiores facere et in sit laborum impedit autem amet?</p>
-        </div>
+    </div>
+
     </main>
 <script src="./components/footer.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
