--- a/product.html
+++ b/product.html
@@ -28,6 +28,10 @@
                         Rerum, ullam ipsa quo aliquid nulla earum doloremque cum in aperiam eveniet tenetur ducimus.
                     </p>
                     <p class="mb-4">Article number: xxxxxxxx</p>
+                    <div class="mb-4">
+                        <label for="quantity" class="form-label">Quantity:</label>
+                        <input type="number" class="form-control" id="quantity" value="1" min="1" style="width: 80px;">
+                    </div>
                     <button class="mb-3" type="button">Add to cart</button>
                     <h3>More info</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet earum perferendis, iste, commodi dolor dolorum, 
