Added padding to main container -top and bottom

--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
     <script src="./components/header.js"></script>
     <header-comp></header-comp>
 
-    <main class="content">
+    <main class="container mt-5 mb-5">
     <div class="container-lg">
         <div class="row">
             <!-- Product Images -->
