--- a/product.html
+++ b/product.html
@@ -24,22 +24,21 @@
                 <div class="col">
                     <h2 class="mb-3">Product</h2>
                     <h3 class="mb-3">Price product</h3>
-                    <p class="mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores qui ipsa amet optio necessitatibus aliquid sequi. 
+                    <p class="mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores qui ipsa amet optio necessitatibus aliquid sequi.
                         Rerum, ullam ipsa quo aliquid nulla earum doloremque cum in aperiam eveniet tenetur ducimus.
                     </p>
                     <p class="mb-4">Article number: xxxxxxxx</p>
                     <div class="mb-4">
                         <label for="quantity" class="form-label">Quantity:</label>
-                        <input type="number" class="form-control" id="quantity" value="1" min="1" style="width: 80px;">
+                        <input type="number" class="form-control" id="quantity" value="1" min="1">
                     </div>
                     <button class="mb-3" type="button">Add to cart</button>
                     <h5>More info</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet earum perferendis, iste, commodi dolor dolorum, 
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet earum perferendis, iste, commodi dolor dolorum,
                         neque laudantium voluptas reiciendis ratione maiores facere et in sit laborum impedit autem amet?</p>
                 </div>
         </div>
     </div>
-
     </main>
 <script src="./components/footer.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
