Added style to "add to cart"-button and "quantity"-box

--- a/product.html
+++ b/product.html
@@ -28,14 +28,15 @@
                         Rerum, ullam ipsa quo aliquid nulla earum doloremque cum in aperiam eveniet tenetur ducimus.
                     </p>
                     <p class="mb-4">Article number: xxxxxxxx</p>
-                    <div class="mb-4">
+                    <div class="mb-4" id="quantity-box">
                         <label for="quantity" class="form-label">Quantity:</label>
                         <input type="number" class="form-control" id="quantity" value="1" min="1">
                     </div>
-                    <button class="mb-3" type="button">Add to cart</button>
+                    <button class="btn btn-lg mb-3" type="button" id="add-to-cart-btn">Add to cart</button>
                     <h5>More info</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet earum perferendis, iste, commodi dolor dolorum,
-                        neque laudantium voluptas reiciendis ratione maiores facere et in sit laborum impedit autem amet?</p>
+                        neque laudantium voluptas reiciendis ratione maiores facere et in sit laborum impedit autem amet?
+                    </p>
                 </div>
         </div>
     </div>
