--- a/vite-app/index.html
+++ b/vite-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/png" href="/src/assets/viktorshop-fav.png" />
+		<link rel="icon" type="image/png" href="/icons/viktorshop-fav.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Vite + React</title>
 	</head>
